--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	  <maven.compiler.source>1.8</maven.compiler.source>
 	  <maven.compiler.target>1.8</maven.compiler.target>
   </properties>	
+  <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>corp1</id>
+      <name>Corporate Repository</name>
+      <url>scp://repo/maven2</url>
+      <layout>default</layout>
+    </repository>
+	
   <dependencies>
   	<dependency>
         <groupId>com.google.code.jcouchdb</groupId>
